# unite_toolbox

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml  run-ruff.yml  run-tests.yml
docs/: requirements.txt
docs/source/: api.rst  bin.rst  bootstrapping.rst  conf.py  estimators.rst  functions.rst  index.rst  kde.rst  marginal_information.rst  sampling.rst  tutorials.rst  usage.rst  utilities.rst
docs/source/estimators/: bin.rst  kde.rst  knn.rst
docs/source/tutorials/: Density-Estimation.ipynb  kNN-Estimation-Methods.ipynb
docs/source/utilities/: data_validation.rst  marginal_scores.rst
examples/: 1_Calculate_Entropy.ipynb  Density-Estimation.ipynb  Tutorial_kNN_Estimators.ipynb  kNN-Estimation-Methods.ipynb
src/unite_toolbox/: kde_estimators.py  knn_estimators.py
src/unite_toolbox/utils/: bootstrapping.py  data_validation.py
tests/: aux_functions.py  test_density.py  test_entropy.py  test_kld.py  test_mutual_information.py  test_utils.py
tests/data/: test_data.npy
unite_toolbox/: __init__.py  bin_estimators.py  kde_estimators.py  knn_estimators.py  utils.py
unite_toolbox/utils/: bootstrapping.py  data_validation.py  marginal_information.py  marginal_scores.py  sampling.py
