[project]
name = "unite_toolbox"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.2",
    "scipy>=1.16.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "nbsphinx>=0.9.7",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"