[project]
name = "unite_toolbox"
version = "0.2.0"
description = "A toolbox for practical applications of information theory."
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.25.2",
    "scipy>=1.12.0",
    "tqdm>=4.66.6",
]

authors = [
  {name = "Manuel Álvarez Chaves", email = "manuel.alvarezchaves@simtech.uni-stuttgart.de"},
  {name = "Uwe Ehret", email = "uwe.ehret@kit.edu"},
]

maintainers = [
  {name = "Manuel Álvarez Chaves", email = "manuel.alvarezchaves@simtech.uni-stuttgart.de"}
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.8.4",
    "pytest>=8.2.2",
    "ruff>=0.4.10",
]
docs = [
    "nbsphinx>=0.9.7",
    "sphinx>=7.3.7",
    "sphinx-rtd-theme>=2.0.0",
]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[project.urls]
Documentation = "https://unite-toolbox.readthedocs.io/"
Repository = "https://github.com/manuel-alvarez-chaves/unite_toolbox"
Team = "https://www.simtech.uni-stuttgart.de/exc/research/junior-research-groups/statistical-model-data-integration/"

[tool.ruff]
line-length = 79

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72

[tool.ruff.lint]
# Default ["E4", "E7", "E9", and "F"] --> Pyflakes ("F") and pycodestyle ("E")
extend-select = ["B", "E501", "I", "Q"]